# trading-bot

./: .env.example  .gitignore  LICENSE  README.md  RESEARCH.md  ROADMAP.md  pyproject.toml
scripts/: compare_strategies.py  download_history.py  run_controlled_optimizer.py  run_paper_trading.py  show_losing_trades.py  show_paper_status.py
src/trading_bot/: __init__.py
src/trading_bot/backtest/: __init__.py  config.py  engine.py  metrics.py  result.py  walk_forward.py
src/trading_bot/core/: __init__.py
src/trading_bot/domain/: __init__.py  _validation.py  candle.py  enums.py  position.py  signal.py  trade.py
src/trading_bot/execution/: __init__.py  paper_executor.py  simulator.py
src/trading_bot/indicators/: __init__.py  _validation.py  atr.py  ema.py  market.py  rsi.py
src/trading_bot/learning/: __init__.py  base.py  (+5 more)
tests/backtest/: test_engine.py  test_metrics.py  test_walk_forward.py
tests/domain/: test_position.py  test_signal.py  test_trade.py
tests/execution/: test_paper_executor.py
tests/indicators/: test_atr.py  test_ema.py  test_market.py  test_rsi.py
tests/learning/: test_losing_trade_repository.py
tests/market_data/: test_binance_provider.py  test_csv_store.py
tests/monitoring/: test_monitoring_discord.py  test_monitoring_formatter.py  test_monitoring_service.py
tests/notifications/: conftest.py  test_discord.py  test_formatter.py  test_service.py  test_settings.py
tests/optimization/: test_optimizer.py
tests/persistence/: test_backtest_repository.py  test_paper_codec.py  test_paper_repository.py  test_types.py
tests/risk/: test_position_sizing.py  test_risk_config.py  test_risk_manager.py
tests/strategies/: test_ema_rsi_atr.py  test_market_strategies.py
tests/trading/: test_paper_engine.py  test_paper_runner.py
(+52 files in other folders)
