[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Plataforma educacional para backtesting, paper trading e notificações de resultados no Discord."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "HallanBR" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
